[gd_scene load_steps=35 format=3 uid="uid://owiltak1cxk8"]

[ext_resource type="PackedScene" uid="uid://dtoeo3xx4wyyp" path="res://presets/gui/StatIndicator.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://ctgk7c648iyds" path="res://data/press/splash/splashscreen.png" id="2_u1iab"]
[ext_resource type="Script" path="res://sources/gui/Gui.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://dml4oic211pyo" path="res://presets/gui/WindowButton.tscn" id="3_sl5jl"]
[ext_resource type="PackedScene" uid="uid://c2q5vtkxo04dp" path="res://presets/gui/ActionBox.tscn" id="4"]
[ext_resource type="Shader" path="res://sources/shaders/ControlMask.gdshader" id="4_60kv4"]
[ext_resource type="Texture2D" uid="uid://desxm6lbhpunn" path="res://data/graphics/gui/menu/menubar_button.png" id="4_ah7dm"]
[ext_resource type="Theme" uid="uid://dhb6h35g1bk0x" path="res://data/themes/DefaultTheme.tres" id="4_wx5hs"]
[ext_resource type="PackedScene" uid="uid://dphlgrm0elh6y" path="res://presets/gui/chat/Chat.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://qfpxygkhxldq" path="res://data/graphics/gui/menu/menubar_button_pressed.png" id="5_fdh06"]
[ext_resource type="Texture2D" uid="uid://ch5ego7ihyo0o" path="res://data/graphics/gui/icon/inventory.png" id="5_ntnop"]
[ext_resource type="PackedScene" path="res://presets/gui/inventory/Inventory.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://c3hjdee3hxsoy" path="res://data/graphics/gui/icon/chat.png" id="6_2quic"]
[ext_resource type="Texture2D" uid="uid://qaut55ogln33" path="res://data/graphics/gui/menu/menubar_content.png" id="6_mf0sy"]
[ext_resource type="Script" path="res://sources/gui/MenuIndicator.gd" id="6_npwx0"]
[ext_resource type="Script" path="res://sources/gui/FloatingWindows.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://c233nlbjjlb5l" path="res://data/graphics/gui/icon/map.png" id="7_cv35r"]
[ext_resource type="PackedScene" uid="uid://cjgijbfxixe67" path="res://presets/gui/Login.tscn" id="7_lrq68"]
[ext_resource type="PackedScene" uid="uid://c6nwveqo000dl" path="res://presets/gui/Quit.tscn" id="8"]
[ext_resource type="Texture2D" uid="uid://c7ulpgvdia2sl" path="res://data/graphics/gui/icon/emotes.png" id="8_ppxwt"]
[ext_resource type="PackedScene" uid="uid://x1jkhsyls2i4" path="res://presets/gui/Minimap.tscn" id="9_myjuo"]
[ext_resource type="Texture2D" uid="uid://dwnxstfs54r7t" path="res://data/graphics/gui/icon/quests.png" id="9_vtuwx"]
[ext_resource type="PackedScene" uid="uid://6pundiwfj5s1" path="res://presets/shaders/HQ4x.tscn" id="10_id8es"]
[ext_resource type="Texture2D" uid="uid://b7iy5lm8t328h" path="res://data/graphics/gui/icon/glossary.png" id="10_mq57a"]
[ext_resource type="PackedScene" uid="uid://bmsbt0owg4j86" path="res://presets/gui/emotes/Emote.tscn" id="10_q754c"]
[ext_resource type="Texture2D" uid="uid://dbps18wiv7vlh" path="res://data/graphics/gui/icon/settings.png" id="11_17vy0"]
[ext_resource type="PackedScene" uid="uid://bagfvnt2bhttv" path="res://presets/shaders/CRT.tscn" id="11_x7rk2"]
[ext_resource type="PackedScene" uid="uid://3ldimch2l6rv" path="res://presets/gui/Scrollable.tscn" id="14_xidsc"]
[ext_resource type="JSON" path="res://data/db/news.json" id="15_q438c"]
[ext_resource type="PackedScene" uid="uid://b5tdyq8opcs0u" path="res://presets/gui/Settings.tscn" id="16_gapih"]
[ext_resource type="JSON" path="res://data/db/credits.json" id="16_pfh0e"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hg7ie"]
texture = ExtResource("4_ah7dm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w48pk"]
texture = ExtResource("5_fdh06")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wjdwk"]
shader = ExtResource("4_60kv4")
shader_parameter/offset = 0.2
shader_parameter/progress = 0.0
shader_parameter/inverted = true

[node name="CanvasLayer" type="CanvasLayer"]
layer = 128
script = ExtResource("3")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u1iab")
expand_mode = 1

[node name="UIMargin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 19
theme_override_constants/margin_top = 19
theme_override_constants/margin_right = 19
theme_override_constants/margin_bottom = 19

[node name="VBoxMain" type="VBoxContainer" parent="UIMargin"]
layout_mode = 2

[node name="Indicators" type="HBoxContainer" parent="UIMargin/VBoxMain"]
layout_mode = 2
alignment = 1

[node name="Stat" parent="UIMargin/VBoxMain/Indicators" instance=ExtResource("2")]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
mouse_filter = 0

[node name="Menu" type="Button" parent="UIMargin/VBoxMain/Indicators"]
custom_minimum_size = Vector2(62, 61)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_hg7ie")
theme_override_styles/hover = SubResource("StyleBoxTexture_hg7ie")
theme_override_styles/pressed = SubResource("StyleBoxTexture_w48pk")
theme_override_styles/disabled = SubResource("StyleBoxTexture_hg7ie")
theme_override_styles/focus = SubResource("StyleBoxTexture_hg7ie")
script = ExtResource("6_npwx0")

[node name="ButtonContent" type="TextureRect" parent="UIMargin/VBoxMain/Indicators/Menu"]
material = SubResource("ShaderMaterial_wjdwk")
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -531.0
offset_top = -29.5
offset_right = -19.0
offset_bottom = 34.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 0
texture = ExtResource("6_mf0sy")
stretch_mode = 3

[node name="HBoxButtons" type="HBoxContainer" parent="UIMargin/VBoxMain/Indicators/Menu/ButtonContent"]
use_parent_material = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -404.0
offset_top = -18.0
offset_right = -46.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 0
mouse_filter = 0
alignment = 2

[node name="Inventory" parent="UIMargin/VBoxMain/Indicators/Menu/ButtonContent/HBoxButtons" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("5_ntnop")
flat = true
icon_alignment = 1
targetWindow = NodePath("../../../../../../../FloatingWindows/Inventory")
targetShortcut = &"ui_inventory"

[node name="Chat" parent="UIMargin/VBoxMain/Indicators/Menu/ButtonContent/HBoxButtons" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("6_2quic")
flat = true
targetWindow = NodePath("../../../../../../../FloatingWindows/Chat")
targetShortcut = &"ui_chat"

[node name="Minimap" parent="UIMargin/VBoxMain/Indicators/Menu/ButtonContent/HBoxButtons" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("7_cv35r")
flat = true
targetWindow = NodePath("../../../../../../../FloatingWindows/Minimap")
targetShortcut = &"ui_minimap"

[node name="Emote" parent="UIMargin/VBoxMain/Indicators/Menu/ButtonContent/HBoxButtons" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("8_ppxwt")
flat = true
targetWindow = NodePath("../../../../../../../FloatingWindows/Emote")
targetShortcut = &"ui_emote"

[node name="News" parent="UIMargin/VBoxMain/Indicators/Menu/ButtonContent/HBoxButtons" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("9_vtuwx")
flat = true
targetWindow = NodePath("../../../../../../../FloatingWindows/News")
targetShortcut = &"ui_news"

[node name="Credits" parent="UIMargin/VBoxMain/Indicators/Menu/ButtonContent/HBoxButtons" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("10_mq57a")
flat = true
targetWindow = NodePath("../../../../../../../FloatingWindows/Credit")
targetShortcut = &"ui_credits"

[node name="Settings" parent="UIMargin/VBoxMain/Indicators/Menu/ButtonContent/HBoxButtons" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("11_17vy0")
flat = true
targetWindow = NodePath("../../../../../../../FloatingWindows/Settings")
targetShortcut = &"ui_settings"

[node name="SubViewport" type="SubViewport" parent="UIMargin/VBoxMain/Indicators/Menu"]

[node name="Notification" type="RichTextLabel" parent="UIMargin/VBoxMain"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
theme = ExtResource("4_wx5hs")
theme_type_variation = &"NotificationBox"
bbcode_enabled = true
text = "[center]Welcome to Source of Mana[/center]"
fit_content = true

[node name="ActionBox" parent="UIMargin/VBoxMain" instance=ExtResource("4")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
mouse_filter = 0

[node name="FloatingWindows" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("7")

[node name="Quit" parent="FloatingWindows" instance=ExtResource("8")]
layout_mode = 0
anchor_left = 0.390625
anchor_top = 0.416667
anchor_right = 0.609375
anchor_bottom = 0.583333
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Inventory" parent="FloatingWindows" instance=ExtResource("6")]
show_behind_parent = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1057.0
offset_top = 257.0
offset_right = 1237.0
offset_bottom = 357.0
grow_horizontal = 1
grow_vertical = 1

[node name="Minimap" parent="FloatingWindows" instance=ExtResource("9_myjuo")]
custom_minimum_size = Vector2(200, 125)
layout_mode = 0
offset_left = 1061.0
offset_top = 83.0
offset_right = 1261.0
offset_bottom = 208.0
blockActions = null

[node name="Emote" parent="FloatingWindows" instance=ExtResource("10_q754c")]
custom_minimum_size = Vector2(38, 38)
layout_mode = 0
offset_left = 75.0
offset_top = 98.0
offset_right = 313.0
offset_bottom = 141.0

[node name="Chat" parent="FloatingWindows" instance=ExtResource("5")]
layout_mode = 0
offset_left = 22.0
offset_top = 511.0
offset_right = 420.0
offset_bottom = 700.0
grow_horizontal = 1
grow_vertical = 1

[node name="Login" parent="FloatingWindows" instance=ExtResource("7_lrq68")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.165625
anchor_top = 0.427778
anchor_right = 0.384375
anchor_bottom = 0.597222
offset_right = 0.0
offset_bottom = 0.0
metadata/_edit_use_anchors_ = true

[node name="News" parent="FloatingWindows" instance=ExtResource("14_xidsc")]
layout_mode = 2
offset_left = 827.0
offset_top = 163.0
offset_right = 1258.0
offset_bottom = 655.0
jsonFile = ExtResource("15_q438c")

[node name="Credit" parent="FloatingWindows" instance=ExtResource("14_xidsc")]
layout_mode = 2
offset_left = 23.0
offset_top = 163.0
offset_right = 451.0
offset_bottom = 661.0
jsonFile = ExtResource("16_pfh0e")

[node name="Settings" parent="FloatingWindows" instance=ExtResource("16_gapih")]
layout_mode = 1
offset_left = 829.0
offset_top = 165.0
offset_right = -24.0
offset_bottom = -66.0

[node name="Shaders" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HQ4x" parent="Shaders" instance=ExtResource("10_id8es")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="CRT" parent="Shaders" instance=ExtResource("11_x7rk2")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="UIMargin/VBoxMain/Indicators/Menu" to="UIMargin/VBoxMain/Indicators/Menu" method="_on_pressed"]
[connection signal="resized" from="FloatingWindows" to="FloatingWindows" method="_on_window_resized"]
